[package]
name = "alloy-deadbeef"
version = "0.0.1"
edition = "2021"
authors = ["Pawel Urbanek <contact@pawelurbanek.com>"]
description = "0xdeadbeef"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pawurb/alloy-deadbeef"

[dependencies]

alloy = { version = "0.6", features = ["full", "node-bindings", "json-rpc"] }
eyre = "0.6.12"
futures = "0.3.31"
hex = "0.4.3"
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.2"
criterion = { version = "0.5.1", features = ["async_tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = "0.7.13"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[bench]]
name = "find_beef"
harness = false
